<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/layout_space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_1"
            android:textAllCaps="true"
            android:textColor="@color/question"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/ans_space"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/question_space">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_11" />

            <RadioButton
                android:id="@+id/q1_swedish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_12" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_14" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_2"
            android:textAllCaps="true"
            android:textColor="@color/question"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/ans_space"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/question_space">

            <RadioButton
                android:id="@+id/q2_utsjoki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_21" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_22" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_23" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_24" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_3"
            android:textAllCaps="true"
            android:textColor="@color/question"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/ans_space"/>

        <CheckBox
            android:id="@+id/q3_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans_31" />

        <CheckBox
            android:id="@+id/q3_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans_32" />

        <CheckBox
            android:id="@+id/q3_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans_33" />

        <CheckBox
            android:id="@+id/q3_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans_34"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_4"
            android:textAllCaps="true"
            android:paddingTop="@dimen/question_space"
            android:textColor="@color/question"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/ans_space"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/question_space">

            <RadioButton
                android:id="@+id/q4_turku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_41" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_42" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_43" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_44" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_5"
            android:textAllCaps="true"
            android:textColor="@color/question"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/ans_space"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/question_space">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_51" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_52" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_53" />

            <RadioButton
                android:id="@+id/q5_estonian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_54" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/Submit"
                android:onClick="userSubmit"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/moomin" />

        </RelativeLayout>


    </LinearLayout>


</ScrollView>
